# mc2-utils

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: main.yml
src/: attestation.cpp  attestation.h  crypto.cpp  crypto.h  error.cpp  error.h
tests/: CMakeLists.txt  private.pem  tests.cpp
tests/data/: README.md  evidence  nonce  public.pub  report_key.pub
